--- a/pom.xml
+++ b/pom.xml
@@ -27,24 +27,28 @@
     <eula-wrap_assign-deps-to-properties-phase></eula-wrap_assign-deps-to-properties-phase>
     <pentaho-osgi-bundles.version>10.2.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
     <big-data-plugin.version>10.2.0.0-SNAPSHOT</big-data-plugin.version>
-    <org.apache.orc.version>1.2.3</org.apache.orc.version>
     <org.apache.parquet.version>1.8.1</org.apache.parquet.version>
     <twitter.parquet.version>1.5.0-cdh5.13.0</twitter.parquet.version>
     <jets3t.version>0.9.4</jets3t.version>
     <!-- Added for fragment prototype -->
-    <org.apache.hadoop.version>2.7.3.2.6.0.3-8</org.apache.hadoop.version>
     <org.apache.avro.version>1.8.0</org.apache.avro.version>
-    <parquet.version>1.8.1</parquet.version>
+    <parquet.version>1.14.4</parquet.version>
     <sqoop.version>1.4.6.2.6.0.3-8</sqoop.version>
     <pig.version>0.16.0.2.6.0.3-8</pig.version>
     <dependency.pig.classifier>h2</dependency.pig.classifier>
     <org.apache.oozie.version>4.2.0.2.6.0.3-8</org.apache.oozie.version>
-    <org.apache.hive.version>1.2.1000.2.6.0.3-8</org.apache.hive.version>
-    <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
+    <protobuf-java.version>3.25.6</protobuf-java.version>
+    <org.apache.hive.version>4.0.1</org.apache.hive.version>
+    <org.apache.hbase.version>2.6.2</org.apache.hbase.version>
+    <org.apache.orc.version>1.9.6</org.apache.orc.version>
+    <netty-handler.version>4.1.118.Final</netty-handler.version>
+    <hadoop-shaded-protobuf_3_25.version>1.3.0</hadoop-shaded-protobuf_3_25.version>
+    <org.apache.hadoop.version>3.4.0</org.apache.hadoop.version>
     <shim-bundle-plugin.version>1.1</shim-bundle-plugin.version>
     <zookeeper.version>3.9.3</zookeeper.version>
     <org.apache.hbase.thirdparty.version>2.1.0</org.apache.hbase.thirdparty.version>
     <snakeyaml.version>2.2</snakeyaml.version>
+    <dnsjava.version>3.6.0</dnsjava.version>
   </properties>
 
   <dependencyManagement>
